--- a/devBuild/shop.html
+++ b/devBuild/shop.html
@@ -10,7 +10,7 @@
 
 <body>
     <div id="app"></div>
-    <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="js/shop.js"></script>
 </body>
 
 </html>
