--- a/devBuild/demo.html
+++ b/devBuild/demo.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>
-        商城_XXX网站
+        demo_XXX网站
     </title>
 </head>
 
@@ -16,7 +16,7 @@
     <script src="js/manifest.js" type="text/javascript"></script>
     <script src="js/vendor.js" type="text/javascript"></script>
     <script src="js/common.js" type="text/javascript"></script>
-    <script src="js/shop.js" type="text/javascript"></script>
+    <script src="js/demo.js" type="text/javascript"></script>
 </body>
 
 </html>
