--- a/devBuild/index.html
+++ b/devBuild/index.html
@@ -3,14 +3,20 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta content="telephone=no" name="format-detection">
-    <title>react-multipage</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>
+        XXX网站
+    </title>
 </head>
 
 <body>
     <div id="app"></div>
-    <script type="text/javascript" src="js/index.js"></script>
+
+    <script src="js/manifest.js" type="text/javascript"></script>
+    <script src="js/vendor.js" type="text/javascript"></script>
+    <script src="js/common.js" type="text/javascript"></script>
+    <script src="js/index.js" type="text/javascript"></script>
 </body>
 
 </html>
