--- a/index.html
+++ b/index.html
@@ -6,17 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>
-        商城_XXX网站
+        <%= htmlWebpackPlugin.options.title %>
     </title>
 </head>
 
 <body>
     <div id="app"></div>
-
-    <script src="js/manifest.js" type="text/javascript"></script>
-    <script src="js/vendor.js" type="text/javascript"></script>
-    <script src="js/common.js" type="text/javascript"></script>
-    <script src="js/shop.js" type="text/javascript"></script>
 </body>
 
 </html>
